--- a/Web8-SASSSMACSS/index.html
+++ b/Web8-SASSSMACSS/index.html
@@ -13,7 +13,7 @@
       <div class="row">
         <div class="col-1"></div>
         <div class="col-2">
-          <img class="logo" src="./assets/KFS-DRK.png" alt="placeholder">
+          <img class="logo" src="./assets/KFS-DRK.png" alt="placeholder" height="50" width="200">
         </div>
         <div class="col-9">
           <div class="nav-menu">
@@ -57,7 +57,7 @@
                 Watch Our Video
               </div>
               <div class="b-video">
-                <img class="b-video-img space" src="./assets/KFS.jpg" alt="" />
+                <img class="b-video-img" src="./assets/KFS.jpg" alt="" width="120" height="110"/>
               </div>
               <p class="card-text">
                 Urna lectus phasellus montes porta mid. Eros non magna cras amet in egestas pellentesque!
@@ -93,9 +93,9 @@
         </div>
         <div class="col-6">
           <div class="about-content">
-            <h2 class="about-title">DEVSLOPES TAUGHT ME TO SASS
+            <h2 class="about-title">KEEP GOING NO MATTER
               <br />
-              UP MY STUFF</h2>
+              WHAT?</h2>
               <p class="about-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.is purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt</p>
               <button class="btn btn-third buy-btn-md"type="button" name="button">Buy Now</button>
           </div>
